--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   flutter_spinkit: ^5.2.1
   lottie: ^2.3.2
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
