--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.2.0
+  http: ^1.3.0
+  flutter_profile_picture: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
