--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   shared_preferences: ^2.2.0
   http: ^1.3.0
   flutter_profile_picture: ^2.0.0
+  flutter_staggered_animations: ^1.1.1
 
 
 dev_dependencies:
