--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.3.0
   flutter_profile_picture: ^2.0.0
   flutter_staggered_animations: ^1.1.1
+  lottie: ^3.3.1
 
 
 dev_dependencies:
@@ -64,7 +65,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/assets/student.json
+    - assets/student.json
+    - assets/animation2.json
     # - lib/images/profile_background.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
