change in design

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
   assets:
     - assets/student.json
     - assets/animation2.json
+    - assets/profile.json
     # - lib/images/profile_background.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
