--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.5.3
+  http: ^1.3.0
+  lottie: ^2.7.0
 
 dev_dependencies:
   flutter_test:
@@ -37,7 +36,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/animation/loading.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
