--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   shared_preferences: ^2.5.3
   http: ^1.3.0
   lottie: ^2.7.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
