--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_profile_picture: ^2.0.0
   flutter_staggered_animations: ^1.1.1
   lottie: ^3.3.1
+  table_calendar: ^3.2.0
 
 
 dev_dependencies:
@@ -67,7 +68,12 @@ flutter:
   assets:
     - assets/student.json
     - assets/animation2.json
+    - assets/notification.json
+    - assets/welcome.json
     - assets/profile.json
+    - assets/crackers.json
+    - assets/first_screen.json
+    - assets/welcomebutton.json
     - assets/images/profile.jpg
     # - lib/images/profile_background.jpg
 
